--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^5.0.0
   google_sign_in: ^5.0.3
   firebase_auth: ^1.1.4
+  font_awesome_flutter: ^9.0.0
   flutter_facebook_auth: ^3.3.3+1
 
 dev_dependencies:
